# doogat-integrations

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  genindex.html  index.html  mise.toml  objects.inv  print_zettel_use_case.html  pyproject.toml  renovate.json  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  print_zettel_use_case.doctree
.github/workflows/: build-pre-release-pypi-package.yml  build-release-pypi-package.yml  deploy-docs.yml  release.yml  test.yml
_sources/: index.rst.txt
dev/docs/: release-tui-reuse.md  versioning.md
docs/source/: conf.py  print_zettel_use_case.rst
doogat/integrations/: __init__.py
src/doogat/integrations/jira/: __init__.py  jira.py
src/doogat/integrations/jira/assemblers/: project_zettel_jira_issue.py
tests/: test_assembler.py
