[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doogat-integrations"
version = "0.2.3"
description = ""
authors = [{ name = "Tomáš Bouška", email = "admin@doogat.com" }]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "buvis-pybase>=0.9.0,<1.0.0",
    "doogat-core>=0.2.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "python-semantic-release>=10.5.3,<11.0.0",
]
test = ["pytest>=9.0.1", "pytest-mock>=3.15.1,<4"]
docs = ["sphinx>=8.2.3", "sphinx-rtd-theme>=3.0.2"]

[tool.uv]
default-groups = ["dev", "test"]

[tool.uv.sources]
buvis-pybase = { index = "test-pypi" }
doogat-core = { index = "test-pypi" }

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/doogat"]

[tool.ruff.lint]
extend-select = ["B", "Q", "D"]
ignore = ["D211", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/**/*.py" = [
  "S101",
  "ANN",
  "ARG",
  "SLF001",
  "PLR2004",
]
"**/{tests,docs,tools}/*" = ["D"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
tag_format = "v{version}"
commit_message = "chore(release): {version}"
build_command = "uv build"

[tool.semantic_release.branches.main]
match = "master"
prerelease = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
ignore_merge_commits = true
parse_squash_commits = false

[tool.semantic_release.changelog]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    '''chore(?:\([^)]*\))?: .*''',
    '''ci(?:\([^)]*\))?: .*''',
    '''docs(?:\([^)]*\))?: .*''',
    '''test(?:\([^)]*\))?: .*''',
    '''build(?:\([^)]*\))?: .*''',
    '''refactor(?:\([^)]*\))?: .*''',
    '''style(?:\([^)]*\))?: .*''',
]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }
